frontend/src/app/coil-management/coil-management.component.scss
.container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 20px;
    min-width: 100%;
  }
  
  .left-panel, .center-panel, .right-panel {
    flex: 1;
    padding-inline: 20px;
    padding-top: 1%;
  }
  
  .left-panel, .right-panel {
    background-color: rgba(159, 159, 159, 0.333);
    height: calc(100vh - 220px);
    max-width: 25%;
    border-radius: 15px;
  }

  .center-panel {
    display: flex; 
    justify-content: center;
    align-items: center; 
    height: calc(100vh - 220px); 
    align-content: center; 
}

  
  label {
    display: block;
    margin-bottom: 5px;
    font-size: 16px;
  }
  
  input[type="text"],
  input[type="number"], 
  select {
    width: 100%;
    padding: 10px;
    margin-bottom: 15px;
    font-size: 16px;
  }
  
  input[type="range"] {
    width: 100%;
    margin: 0px;
    padding: 0px;
  }
  
  span {
    display: block;
    font-size: 14px;
    text-align: right;
  }
  
  img {
    max-width: 80%;
    height: auto;
  }
  

select, input, textarea {
    font-family: Arial, sans-serif;
    font-size: 16px;
    padding: 10px;
    border: 2px solid #ccc;
    border-radius: 8px;
    background-color: #f9f9f9;
    transition: all 0.3s ease;
    width: 100%;
    box-sizing: border-box; 
  }
  
  select:hover, input:hover, textarea:hover {
    border-color: #888;
  }
  
  select:focus, input:focus, textarea:focus {
    outline: none; 
    border-color: #007BFF; 
    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
  }
  
  select {
    appearance: none; 
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="gray" d="M0 0l5 5 5-5H0z"/></svg>');
    background-repeat: no-repeat;
    background-position: right 10px center;
    background-size: 10px;
    cursor: pointer;
  }
  
  .left-panel label {
    display: block;
    font-weight: bold;
    margin-bottom: 5px;
  }
  
  .left-panel select, .left-panel input {
    margin-bottom: 15px;
  }

  .saveButton{
    background-color: #007BFF;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.3s ease;
 }

.saveButton:hover {
    background-color: #0056b3;
}
  
.buttonContainer {
  display: flex;
  flex-direction: column; 
  align-items: center;  
  gap: 8px;                
}

.buttons-row {
  display: flex;
  gap: 10px;               
}


.no-coil-selected {
  font-style: italic;
  color: #800000;
  justify-content: center;
}


.coil-container {
  display: flex;
  align-items: center;
  margin: 10px;
  justify-content: center;

  .selectedCoilCombobox {
    margin: 10px;
    padding: 5px;
    border-radius: 4px;
    font-size: 14px;
  }

  .new-coil-button {
    padding: 5px 100px;
    white-space: nowrap;
  }
}

.invalid {
  border: 1px solid red;
}

.error-message {
  color: red;
  font-size: 0.9em;
  margin-top: -10px;
}

.saveMessage{
  color: green;
  font-size: 1.3em;
  margin-top: 40px;
}

.modal.show {
  display: block;
  background-color: rgba(0, 0, 0, 0.4); // halbtransparenter Hintergrund
}

.modal-dialog {
  margin-top: 10%; // z. B. etwas tiefer setzen
}

